update Banking transaction
