# server/src/main/java/fr/finanting/server/controller/BankingTransactionController.java
@@ -1,22 +1,20 @@
 package fr.finanting.server.controller;
 
-import fr.finanting.server.dto.BankingTransactionDTO;
-import fr.finanting.server.exception.*;
-import fr.finanting.server.parameter.CreateBankingTransactionParameter;
-import fr.finanting.server.parameter.UpdateBankingTransactionParameter;
-import fr.finanting.server.security.UserDetailsImpl;
+import fr.finanting.server.codegen.api.BankingTransactionApi;
+import fr.finanting.server.codegen.model.BankingTransactionDTO;
+import fr.finanting.server.codegen.model.BankingTransactionParameter;
 import fr.finanting.server.service.BankingTransactionService;
 
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.Authentication;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 
 @RestController
-@RequestMapping("bankingTransaction")
-public class BankingTransactionController {
+public class BankingTransactionController extends MotherController implements BankingTransactionApi {
 
     private BankingTransactionService bankingTransactionService;
 
@@ -25,6 +23,42 @@ public class BankingTransactionController {
         this.bankingTransactionService = bankingTransactionService;
     }
 
+    @Override
+    public ResponseEntity<BankingTransactionDTO> createBankingTransaction(BankingTransactionParameter body) {
+        String userName = this.getCurrentPrincipalName();
+        BankingTransactionDTO bankingTransactionDTO = this.bankingTransactionService.createBankingTransaction(body, userName);
+        return new ResponseEntity<>(bankingTransactionDTO, HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteBankingTransaction(Integer bankingTransactionId) {
+        String userName = this.getCurrentPrincipalName();
+        this.bankingTransactionService.deleteAccountBankingTransaction(bankingTransactionId, userName);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<BankingTransactionDTO>> getBankingAccountTransaction(Integer bankingAccountId) {
+        String userName = this.getCurrentPrincipalName();
+        List<BankingTransactionDTO> bankingTransactionDTOList = this.bankingTransactionService.getBankingAccountTransaction(bankingAccountId, userName);
+        return new ResponseEntity<>(bankingTransactionDTOList, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<BankingTransactionDTO> getBankingTransaction(Integer bankingTransactionId) {
+        String userName = this.getCurrentPrincipalName();
+        BankingTransactionDTO bankingTransactionDTO = this.bankingTransactionService.getBankingTransaction(bankingTransactionId, userName);
+        return new ResponseEntity<>(bankingTransactionDTO, HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<BankingTransactionDTO> updateBankingTransaction(Integer bankingTransactionId, BankingTransactionParameter body) {
+        String userName = this.getCurrentPrincipalName();
+        BankingTransactionDTO bankingTransactionDTO = this.bankingTransactionService.updateBankingTransaction(bankingTransactionId, body, userName);
+        return new ResponseEntity<>(bankingTransactionDTO, HttpStatus.OK);
+    }
+
+    /*
     @PostMapping("/createBankingTransaction")
     public BankingTransactionDTO createBankingTransaction(final Authentication authentication,
                                     @RequestBody final CreateBankingTransactionParameter createBankingTransactionParameter)
@@ -66,5 +100,7 @@ public class BankingTransactionController {
         final UserDetailsImpl userDetailsImpl = (UserDetailsImpl) authentication.getPrincipal();
         this.bankingTransactionService.deleteAccountBankingTransaction(id, userDetailsImpl.getUsername());
     }
+
+     */
     
 }
